--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.5'
-
 networks:
   default:
     name: load-testing-network
@@ -7,12 +5,12 @@ networks:
 services:
 
   prometheus:
+    container_name: prometheus
     image: "prom/prometheus"
     ports:
       - "9090:9090"
     volumes:
-      - ../prometheus/prom.yaml:/etc/prometheus/prometheus.yml
-    container_name: prometheus
+      - ./prometheus/prom.yaml:/etc/prometheus/prometheus.yml
 
   db-service:
     container_name: db-service
@@ -20,10 +18,10 @@ services:
       - NET_ADMIN
     tty: true
     build:
-      context: ../db
+      context: db
     restart: always
     env_file:
-      - ../db/.env
+      - db/.env
     ports:
       - "6000:5432"
     deploy:
@@ -43,6 +41,22 @@ services:
     environment:
       - INFLUXDB_DB=k6
 
+  tempo:
+    container_name: tempo
+    image: grafana/tempo:latest
+    command: [ "--target=all", "--multitenancy.enabled=false", "-config.file=/etc/tempo.yaml" ]
+    ports:
+      - "14268:14268"  # jaeger ingest
+      - "3200:3200"   # tempo
+      - "9095:9095" # tempo grpc
+      - "4317:4317"  # otlp grpc
+      - "4318:4318"  # otlp http
+      - "9411:9411"   # zipkin
+    volumes:
+      - ./tempo/tempo.yaml:/etc/tempo.yaml
+      - ./tempo-data:/var/tempo
+
+
   grafana:
     container_name: grafana
     image: grafana/grafana:latest
@@ -54,15 +68,16 @@ services:
       - GF_AUTH_BASIC_ENABLED=false
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
     volumes:
-      - ../grafana/dashboards:/var/lib/grafana/dashboards
-      - ../grafana/grafana-dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
-      - ../grafana/grafana-datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - ./grafana/grafana-dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
+      - ./grafana/grafana-datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
 
   spring-app-virtual:
     build:
       context: ..
     depends_on:
       - db-service
+      - tempo
     restart: always
     environment:
       - THREAD_MODE=virtual
