--- a/docker/grafana/grafana-datasource.yaml
+++ b/docker/grafana/grafana-datasource.yaml
@@ -11,3 +11,7 @@ datasources:
     type: prometheus
     access: proxy
     url: http://prometheus:9090
+  - name: tempo
+    type: tempo
+    access: proxy
+    url: http://tempo:3200
