--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,6 +39,18 @@ management:
     web:
       exposure:
         include: '*'
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
   metrics:
     tags:
       application: spring-app
+  otlp:
+    tracing:
+      endpoint: http://tempo:4318/v1/traces
+  zipkin:
+    tracing:
+      endpoint: http://tempo:9411
+
+logging.pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} %p"
