experiment with CompositePropertySource

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,13 +4,13 @@ spring:
   threads:
     virtual:
       enabled: true
-  datasource:
-    url: jdbc:postgresql://localhost:6000/postgres?currentSchema=library
-    username: postgres
-    password: postgres
-  sql:
-    init:
-      platform: postgres
+#  datasource:
+#    url: jdbc:postgresql://localhost:6000/postgres?currentSchema=library
+#    username: postgres
+#    password: postgres
+#  sql:
+#    init:
+#      platform: postgres
 
 server:
   port: '8081'
