--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,23 +7,36 @@ spring:
     virtual:
       enabled: ${VIRTUAL_THREAD}
 
-  datasource:
-    username: postgres
-    url: jdbc:postgresql://db-service:5432/postgres?currentSchema=library
-    password: postgres
+  #  datasource:
+#    url: jdbc:postgresql://db-service:5432/postgres?currentSchema=library
+#    username: postgres
+#    password: postgres
+#
+#  jpa:
+#    generate-ddl: 'false'
+#    database: POSTGRESQL
+#    properties:
+#      hibernate:
+#        default_schema: library
+#    show-sql: 'false'
+#    hibernate:
+#      ddl-auto: none
+#  sql:
+#    init:
+#      platform: postgres
 
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
   jpa:
-    generate-ddl: 'false'
-    database: POSTGRESQL
-    properties:
-      hibernate:
-        default_schema: library
-    show-sql: 'false'
+    generate-ddl: false
+    database:
+    show-sql: false
     hibernate:
       ddl-auto: none
-  sql:
-    init:
-      platform: postgres
+    database-platform: org.hibernate.dialect.H2Dialect
 
 server:
   port: '8080'
@@ -55,4 +68,8 @@ management:
   #  tracing:
   #    endpoint: http://tempo:9411
 
-logging.pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} %p"
+#logging.pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} %p"
+logging:
+  level:
+    gae: INFO
+    org.springframework.cloud.kubernetes: TRACE
