--- a/docker/prometheus/prom.yaml
+++ b/docker/prometheus/prom.yaml
@@ -2,7 +2,19 @@
 global:
   scrape_interval:     5s # Set the scrape interval to every 5 seconds.
   evaluation_interval: 5s # Evaluate rules every 5 seconds.
+#scrape_configs:
+#  - job_name: 'reactive-spring-boot-app'
+#    metrics_path: '/actuator/prometheus'
+#    static_configs:
+#      - targets: ['spring-app-virtual:8080','spring-app-standard:8080']
 scrape_configs:
+  - job_name: otel_collector
+    honor_timestamps: true
+    scrape_interval: 10s
+    scrape_timeout: 10s
+    static_configs:
+      - targets: [ 'otel-collector:8889' ]
+      - targets: [ 'otel-collector:8888' ]
   - job_name: 'reactive-spring-boot-app'
     metrics_path: '/actuator/prometheus'
     static_configs:
