--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,40 +3,41 @@ thread-mode: ${THREAD_MODE}
 spring:
   application:
     name: spring-app-${THREAD_MODE}
+    org: spring-test
   threads:
     virtual:
       enabled: ${VIRTUAL_THREAD}
 
-  #  datasource:
-#    url: jdbc:postgresql://db-service:5432/postgres?currentSchema=library
-#    username: postgres
-#    password: postgres
-#
-#  jpa:
-#    generate-ddl: 'false'
-#    database: POSTGRESQL
-#    properties:
-#      hibernate:
-#        default_schema: library
-#    show-sql: 'false'
-#    hibernate:
-#      ddl-auto: none
-#  sql:
-#    init:
-#      platform: postgres
-
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://db-service:5432/postgres?currentSchema=library
+    username: postgres
+    password: postgres
+
   jpa:
-    generate-ddl: false
-    database:
-    show-sql: false
+    generate-ddl: 'false'
+    database: POSTGRESQL
+    properties:
+      hibernate:
+        default_schema: library
+    show-sql: 'false'
     hibernate:
       ddl-auto: none
-    database-platform: org.hibernate.dialect.H2Dialect
+  sql:
+    init:
+      platform: postgres
+
+#  datasource:
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+#  jpa:
+#    generate-ddl: false
+#    database:
+#    show-sql: false
+#    hibernate:
+#      ddl-auto: none
+#    database-platform: org.hibernate.dialect.H2Dialect
 
 server:
   port: '8080'
@@ -45,6 +46,9 @@ server:
   #    enabled: true
 
 management:
+  observations:
+    key-values:
+      org: ${spring.application.org}
   endpoint:
     metrics:
       enabled: true
@@ -59,17 +63,26 @@ management:
     sampling:
       probability: 1.0
   metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server.request: true
+          client.request: true
     tags:
-      application: spring-app
+      application: ${spring.application.name}
+      org: ${spring.application.org}
+  prometheus:
+    metrics:
+      export:
+        step: 10s
   otlp:
     tracing:
-      endpoint: http://otel:4318/v1/traces
-  #zipkin:
-  #  tracing:
-  #    endpoint: http://tempo:9411
+      endpoint: http://otel-collector:4318/v1/traces
+    metrics:
+      export:
+        url: http://otel-collector:4318/v1/metrics
 
 #logging.pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} %p"
 logging:
   level:
-    gae: INFO
-    org.springframework.cloud.kubernetes: TRACE
+    org.c4rth: DEBUG
